Changes for 1.5
* New game option, "AI Bonus Income Flat Rate", which gives a flat bonus every turn to all AIs. (veqryn)

* Changed PlayerID.getData() to be deprecated, and removed all uses of it that I could. (veqryn)

* Fixed various bugs in Scrambling, like not having dependent battles, not adding the units to existing battles, not removing units from old battles. (veqryn)

* Completely re-wrote how scrambling works.  All scrambling now takes place before any battles begin.  (veqryn)

* New game option, "Scramble To Any Amphibious Assault", allows bases not being attacked to scramble to defend bases that are being attacked amphibiously. (veqryn)

* Allowed double clicking on a game in the lobby to equal joining that game. (veqryn)

* Removing all scrambling code from the engine, in order to start over and code correctly. (veqryn)

* Created new TripleAUnit variable for keeping track of bonus movement, and eliminated use of unit attachment getMovement.  In order to see a units movement, please use either getMaxMovementAllowed() or getMovementLeft(), both in TripleAUnit. (veqryn)

* Complete cleanup of all code, adding final on to everything that can take it. (veqryn)

* Redoing of movement validation to use movement costs, and completely rewriting the movement validation of carriers and aircraft for landing zones. (edwin van der wal)

* Refactoring Route class to use movement costs, rather than number of steps. (edwin van der wal)

* Changing the internal logic of scrambling to correctly test for the max scrambling length, and a new unit attachment, maxScrambleCount, which determines how many units can scramble. (bung)

* Allowed "each" as a count number for National Objectives, which then multiplies the bonus by the number of territories in that list who have their conditions met. (veqryn)

* Network menu option, "Show Who is Who", now shows players who are AI. (veqryn)
